# TetrisOGL

./: CMakeLists.txt  IA.cpp  IA.h  LICENSE  README.md  constants.cpp  constants.h  constants.hpp  gl2d.cpp  glFenetre.h  glFenetre.hpp  musique.hpp  net_header.hpp  players.cpp  players.hpp  pong.cpp  terrain.cpp  terrain.hpp  tetris_client.cpp  tetris_main.cpp  tetris_serveur.cpp  tetrominos.cpp  tetrominos.h  tetrominos.hpp
other/: gtkgl.cpp  hexaedre.hpp  main.cpp  pong.cpp  rgb.cpp
other/netpong/: #makefile#  client.cpp  makefile  netpong.hpp  serveur.cpp
other/old/: gtkgl.cpp
other/opengl/: gl2d.cpp
other/sort/: mergesort.cpp  smoothsort.hh
